# RDtattoo

./: .gitignore  Dockerfile  Dockerfile.notebook  Dockerfile.streamlit  README.md  array_generator.py  docker-compose.yml  mock_example.py  plotly_colorscales.py  pyproject.toml  rd_defaults.py  rd_simulator_gui.py  requirements.txt  setup.py  tattoo.html  tattoo.ipynb  tattoo.py  tattoo2.html  tattoo2.ipynb  tattoo2.py  tattoo_functions.py  tattoo_plotter.py  test.html  test.ipynb  test.txt  tf.py
.github/workflows/: convert_notebook.yml
rdtattoo/: array_generator.py  initial_conditions.py  rd_defaults.py  rd_simulator_gui.py  tattoo_functions.py  tattoo_plotter.py
