[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdtattoo"
version = "0.1.0"
description = "Generating reaction-diffusion patterns for tattoos"
authors = [
    { name="Misha Rubanov", email="misha.rubanov.1@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "matplotlib>=3.10.1",
    "plotly>=6.0.1",
    "scipy>=1.15.2",
    "streamlit>=1.44.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.0.0"
]

[tool.ruff]
line-length=120

[tool.ruff.lint]
extend-select = ["E501"]